--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>SPAGE | 起始页</title>
+    <link rel="icon" href="https://gitee.com/xdgitee/imgs/raw/master/img/Logo.png" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -16,10 +17,12 @@
           <button class="down" onclick="window.open('https://gitee.com/xdgitee/spage/releases/download/0.2.0/SPage.zip')">下载扩展</button>
           <button class="web disabled">网页版</button>
         </div>
+        <p>仅限 PC端 & 插件</p>
       </div>
       <div class="right-img">
         <div class="img">
           <img src="./img.png" />
+          <!-- <img src="https://gitee.com/xdgitee/imgs/raw/master/img/img.png" /> -->
         </div>
       </div>
     </section>
