--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h2>SPAGE</h2>
         <h3>高效&nbsp;/&nbsp;简约</h3>
         <div class="button-group">
-          <button class="down" onclick="window.open('https://gitee.com/xdgitee/spage/releases/download/0.2.0/SPage.zip')">下载扩展</button>
+          <button class="down" onclick="window.open('https://gitee.com/xdgitee/spage/releases/download/0.2.0/Plugin.zip')">下载扩展</button>
           <button class="web disabled">网页版</button>
         </div>
         <p>仅限 PC端 & 插件</p>
